continued progress on the landing page. Had some issues aligning the text to the pictures for the info section but was able to resolve it through some help on stack overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto&display=swap'); */
 
 :root {
   --hero-bg-color: #1F2937;
@@ -8,6 +8,7 @@
   --info-main-text-color: #1F2937;
   --quote-bg-color: #b8b8b9;
   --quote-text-color: #1F2937;
+  --page-padding-size: 0 15% 0 15%;
 }
 
 body{
@@ -17,14 +18,14 @@ body{
   display:flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: 'Roboto' ;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: var(--page-padding-size);
   background-color: var(--hero-bg-color);
 }
 
@@ -39,6 +40,7 @@ body{
 a {
   text-decoration: none;
 }
+
 
 .nav-items ul{
   display: flex;
@@ -62,12 +64,14 @@ ul {
   align-items: center;
   gap: 1em;
   background-color: var(--hero-bg-color);
-  padding: 25px 0 50px 0;
+  padding: var(--page-padding-size);
+  padding-top: 40px;
+  padding-bottom: 100px;
   margin: 0;
 }
 
 .hero {
-  flex: 0 50%;
+  flex: 0 1 50%;
 }
 
 .hero h1 {
@@ -82,7 +86,7 @@ ul {
   margin: 1px;
 }
 
-.hero input {
+.signUp-btn1 {
   border-color: var(--btn-bg-color);
   background-color: var(--btn-bg-color);
   color: var(--hero-main-text-color);
@@ -91,7 +95,61 @@ ul {
   margin-top: 5px;
 }
 
+.hero-img {
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+  height: 211.5px;
+  width: 100%;
+}
 
+.info-container {
+  padding: var(--page-padding-size);
+}
 
+.info-title {
+  font-size: 36px;
+  color: var(--info-main-text-color);
+  text-align: center;
+}
 
+.info-cards {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 25px;
+}
+.info-cards img {
+  width: 100px;
+  height: 100px;
+  border: 5px solid var(--btn-bg-color);
+  border-radius: 8px;
+}
 
+.card {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  width: 120px;
+}
+
+.quote-container {
+  padding: var(--page-padding-size);
+}
+
+.signUp-container {
+  padding: var(--page-padding-size);
+}
+
+footer{
+  padding: var(--page-padding-size);
+  background-color: var(--hero-bg-color);
+  color: var(--hero-main-text-color)
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+}
